# QTMobileOperators

./: .gitignore  CMakeLists.txt  MobileOperators.rar  README.md  config.json
include/: DataProviderFactory.h  IDataProvider.h  IconDelegate.h  MainWindow.h  Paths.h  SQLDataProvider.h
src/: DataProviderFactory.cpp  IconDelegate.cpp  MainWindow.cpp  SQLDataProvider.cpp
